ChmodCheckbox is completed

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
       <script nomodule src="/build/chmod-checkbox.js"></script>
     </head>
   <body>  
-      <chmod-checkbox />
+      <chmod-checkbox permission="0"/>
   </body>
 </html>
