unused files are removed and some style changes

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,22 @@
       <script nomodule src="/build/chmod-checkbox.js"></script>
     </head>
   <body>  
-      <chmod-checkbox permission="0"/>
+    <div style="display:flex">
+      <div style="flex: 0 0 65%">
+        <span>Hello</span>
+      </div>
+      <div style="flex:1">
+        <div>
+          <chmod-checkbox permission="0"/>
+        </div>
+        <div>
+          <chmod-checkbox permission="0"/>
+        </div>
+        <div>
+          <chmod-checkbox permission="0"/>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
