base prop is added. README is updated with how to get a prop's value.

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
       </div>
       <div style="flex:1">
         <div>
-          <chmod-checkbox permission="0"/>
+          <chmod-checkbox permission="0" base="hello" />
         </div>
         <div>
-          <chmod-checkbox permission="0"/>
+          <chmod-checkbox permission="0" base="boom" />
         </div>
         <div>
           <chmod-checkbox permission="0"/>
