Decode is completed but checked bug is still here

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
     </head>
   <body>  
     <div style="display:flex">
-      <div style="flex: 0 0 65%">
+      <!-- <div style="flex: 0 0 65%">
         <span>Hello</span>
-      </div>
+      </div> -->
       <div style="flex:1">
         <div>
-          <chmod-checkbox permission="3" base="hello" />
+          <chmod-checkbox permission="5" base="hello" />
         </div>
         <div>
-          <chmod-checkbox permission="0" base="boom" />
+          <chmod-checkbox permission="7" base="boom" />
         </div>
         <div>
-          <chmod-checkbox permission="0"/>
+          <chmod-checkbox permission="1"/>
         </div>
       </div>
     </div>
