Complete refactory and bugfix is completed

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,10 @@
       <title>Stencil Component Starter</title>
       <script type="module" src="/build/chmod-checkbox.esm.js"></script>
       <script nomodule src="/build/chmod-checkbox.js"></script>
+      <script type="module" src="https://unpkg.com/@paraboly/pwc-animated-checkbox@latest/dist/pwc-animated-checkbox/pwc-animated-checkbox.esm.js"></script>
     </head>
   <body>  
     <div style="display:flex">
-      <!-- <div style="flex: 0 0 65%">
-        <span>Hello</span>
-      </div> -->
       <div style="flex:1">
         <div>
           <chmod-checkbox permission="5" base="hello" />
